@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 2004-2009  exedio GmbH (www.exedio.com)
+ * Copyright (C) 2004-2012  exedio GmbH (www.exedio.com)
  *
  * This library is free software; you can redistribute it and/or
  * modify it under the terms of the GNU Lesser General Public
@@ -18,8 +18,14 @@
 
 package com.exedio.cope;
 
-import static com.exedio.cope.util.SafeFile.delete;
+import static com.exedio.cope.DataField.DEFAULT_LENGTH;
+import static com.exedio.cope.DataItem.TYPE;
+import static com.exedio.cope.DataItem.data;
+import static com.exedio.cope.DataItem.data10;
+import static com.exedio.cope.util.StrictFile.delete;
+import static java.io.File.createTempFile;
 
+import edu.umd.cs.findbugs.annotations.SuppressFBWarnings;
 import java.io.ByteArrayInputStream;
 import java.io.ByteArrayOutputStream;
 import java.io.File;
@@ -29,7 +35,7 @@ import java.io.OutputStream;
 
 public class DataTest extends AbstractRuntimeTest
 {
-	public/*for web.xml*/ static final Model MODEL = new Model(DataItem.TYPE, DataSubItem.TYPE);
+	public static final Model MODEL = new Model(TYPE, DataSubItem.TYPE);
 
 	static
 	{
@@ -49,13 +55,13 @@ public class DataTest extends AbstractRuntimeTest
 	{
 		super.setUp();
 
-		final int data8Length = data8.length;
+		final int data8Length = bytes8.length;
 		// must be substantially larger than
 		// dataAttribute.bufferSize* values in cope.properties
 		final int dataBigLength = (50*1024) + 77;
 		dataBig = new byte[dataBigLength];
 		for(int i = 0; i<dataBigLength; i++)
-			dataBig[i] = data8[i % data8Length];
+			dataBig[i] = bytes8[i % data8Length];
 
 		item = deleteOnTearDown(new DataItem());
 	}
@@ -93,7 +99,7 @@ public class DataTest extends AbstractRuntimeTest
 			item.getData(tempStream);
 			assertData(expectedData, tempStream.toByteArray());
 
-			final File tempFile = File.createTempFile("exedio-cope-DataTest-", ".tmp");
+			final File tempFile = createTempFile(DataTest.class.getName(), ".tmp");
 			delete(tempFile);
 			assertFalse(tempFile.exists());
 			item.getData(tempFile);
@@ -110,7 +116,7 @@ public class DataTest extends AbstractRuntimeTest
 			item.getData(tempStream);
 			assertEquals(0, tempStream.toByteArray().length);
 
-			final File tempFile = File.createTempFile("cope-DataTest.", ".tmp");
+			final File tempFile = createTempFile(DataTest.class.getName(), ".tmp");
 			delete(tempFile);
 			assertFalse(tempFile.exists());
 			item.getData(tempFile);
@@ -118,10 +124,11 @@ public class DataTest extends AbstractRuntimeTest
 		}
 	}
 
+	@SuppressFBWarnings("RV_RETURN_VALUE_IGNORED_INFERRED")
 	public void testData() throws MandatoryViolationException, IOException
 	{
-		assertEquals(10, data10.length);
-		assertEquals(11, data11.length);
+		assertEquals(10, bytes10.length);
+		assertEquals(11, bytes11.length);
 
 		// test model
 		assertEquals(0, DataField.min(0, 0l));
@@ -152,30 +159,30 @@ public class DataTest extends AbstractRuntimeTest
 			assertEquals("l must not be negative, but was -1", e.getMessage());
 		}
 
-		assertEquals("DataField.Value:aa7af817", DataField.toValue(data4).toString());
-		assertEquals("DataField.Value:9f13f82382aa7a5613f8", DataField.toValue(data10).toString());
-		assertEquals("DataField.Value:169f13f82382aa7a5613...(11)", DataField.toValue(data11).toString());
-		assertEquals("DataField.Value:ca47aa7af817e968c12c...(21)", DataField.toValue(data21).toString());
-		final ByteArrayInputStream testBaos = new ByteArrayInputStream(data4);
+		assertEquals("DataField.Value:aa7af817", DataField.toValue(bytes4).toString());
+		assertEquals("DataField.Value:9f13f82382aa7a5613f8", DataField.toValue(bytes10).toString());
+		assertEquals("DataField.Value:169f13f82382aa7a5613...(11)", DataField.toValue(bytes11).toString());
+		assertEquals("DataField.Value:ca47aa7af817e968c12c...(21)", DataField.toValue(bytes21).toString());
+		final ByteArrayInputStream testBaos = new ByteArrayInputStream(bytes4);
 		assertEquals("DataField.Value:"+testBaos.toString(), DataField.toValue(testBaos).toString());
 		assertEquals("DataField.Value:hallo.txt", DataField.toValue(new File("hallo.txt")).toString());
 
-		assertEquals(item.TYPE, item.data.getType());
-		assertEquals("data", item.data.getName());
-		assertEquals(false, item.data.isMandatory());
-		assertEquals(null, item.data.getPattern());
-		assertEquals(item.data.DEFAULT_LENGTH, item.data.getMaximumLength());
-		assertEquals(DataField.Value.class, item.data.getValueClass());
+		assertEquals(TYPE, data.getType());
+		assertEquals("data", data.getName());
+		assertEquals(false, data.isMandatory());
+		assertEquals(null, data.getPattern());
+		assertEquals(DEFAULT_LENGTH, data.getMaximumLength());
+		assertEquals(DataField.Value.class, data.getValueClass());
 
-		assertEquals(item.TYPE, item.data10.getType());
-		assertEquals("data10", item.data10.getName());
-		assertEquals(false, item.data10.isMandatory());
-		assertEquals(null, item.data10.getPattern());
-		assertEquals(10, item.data10.getMaximumLength());
-		assertEquals(DataField.Value.class, item.data10.getValueClass());
+		assertEquals(TYPE, data10.getType());
+		assertEquals("data10", data10.getName());
+		assertEquals(false, data10.isMandatory());
+		assertEquals(null, data10.getPattern());
+		assertEquals(10, data10.getMaximumLength());
+		assertEquals(DataField.Value.class, data10.getValueClass());
 
-		assertSerializedSame(item.data  , 362);
-		assertSerializedSame(item.data10, 364);
+		assertSerializedSame(data  , 362);
+		assertSerializedSame(data10, 364);
 
 		try
 		{
@@ -197,12 +204,12 @@ public class DataTest extends AbstractRuntimeTest
 		}
 
 		// condition startsWith
-		assertEquals(item.data.startsWith(data4), item.data.startsWith(data4));
-		assertEquals(item.data.startsWith(data4).hashCode(), item.data.startsWith(data4).hashCode());
-		assertNotEquals(item.data.startsWith(data4), item.data.startsWith(data6));
-		assertNotEquals(item.data.startsWith(data4), item.data.startsWith(data6x4));
-		assertNotEquals(item.data.startsWith(data4), item.data10.startsWith(data4));
-		assertEquals("DataItem.data startsWith 'aa7af817'", item.data.startsWith(data4).toString());
+		assertEquals(data.startsWith(bytes4), data.startsWith(bytes4));
+		assertEquals(data.startsWith(bytes4).hashCode(), data.startsWith(bytes4).hashCode());
+		assertNotEquals(data.startsWith(bytes4), data.startsWith(bytes6));
+		assertNotEquals(data.startsWith(bytes4), data.startsWith(bytes6x4));
+		assertNotEquals(data.startsWith(bytes4), data10.startsWith(bytes4));
+		assertEquals("DataItem.data startsWith 'aa7af817'", data.startsWith(bytes4).toString());
 		try
 		{
 			new StartsWithCondition(null, null);
@@ -214,7 +221,7 @@ public class DataTest extends AbstractRuntimeTest
 		}
 		try
 		{
-			new StartsWithCondition(item.data, null);
+			new StartsWithCondition(data, null);
 			fail();
 		}
 		catch(final NullPointerException e)
@@ -223,7 +230,7 @@ public class DataTest extends AbstractRuntimeTest
 		}
 		try
 		{
-			item.data.startsWith(null);
+			data.startsWith(null);
 			fail();
 		}
 		catch(final NullPointerException e)
@@ -233,7 +240,7 @@ public class DataTest extends AbstractRuntimeTest
 		// TODO treat as to isNotNull
 		try
 		{
-			item.data.startsWith(data0);
+			data.startsWith(bytes0);
 			fail();
 		}
 		catch(final IllegalArgumentException e)
@@ -243,28 +250,28 @@ public class DataTest extends AbstractRuntimeTest
 
 		// test data
 		assertIt(null);
-		assertCondition(item.TYPE, item.data.startsWith(data4));
-		assertCondition(item.TYPE, item.data.startsWith(data6));
-		assertCondition(item.TYPE, item.data.startsWith(data6x4));
+		assertCondition(TYPE, data.startsWith(bytes4));
+		assertCondition(TYPE, data.startsWith(bytes6));
+		assertCondition(TYPE, data.startsWith(bytes6x4));
 
 		// set byte[]
-		item.setData(data4);
-		assertIt(data4);
-		assertCondition(item, item.TYPE, item.data.startsWith(data4));
-		assertCondition(item.TYPE, item.data.startsWith(data6));
-		assertCondition(item.TYPE, item.data.startsWith(data6x4));
+		item.setData(bytes4);
+		assertIt(bytes4);
+		assertCondition(item, TYPE, data.startsWith(bytes4));
+		assertCondition(TYPE, data.startsWith(bytes6));
+		assertCondition(TYPE, data.startsWith(bytes6x4));
 
-		item.setData(data6);
-		assertIt(data6);
-		assertCondition(item.TYPE, item.data.startsWith(data4));
-		assertCondition(item, item.TYPE, item.data.startsWith(data6));
-		assertCondition(item, item.TYPE, item.data.startsWith(data6x4));
+		item.setData(bytes6);
+		assertIt(bytes6);
+		assertCondition(TYPE, data.startsWith(bytes4));
+		assertCondition(item, TYPE, data.startsWith(bytes6));
+		assertCondition(item, TYPE, data.startsWith(bytes6x4));
 
-		item.setData(data0);
-		assertIt(data0);
-		assertCondition(item.TYPE, item.data.startsWith(data4));
-		assertCondition(item.TYPE, item.data.startsWith(data6));
-		assertCondition(item.TYPE, item.data.startsWith(data6x4));
+		item.setData(bytes0);
+		assertIt(bytes0);
+		assertCondition(TYPE, data.startsWith(bytes4));
+		assertCondition(TYPE, data.startsWith(bytes6));
+		assertCondition(TYPE, data.startsWith(bytes6x4));
 
 		item.setData(dataBig);
 		assertIt(dataBig);
@@ -274,17 +281,17 @@ public class DataTest extends AbstractRuntimeTest
 
 
 		// set InputStream
-		item.setData(stream(data4));
+		item.setData(stream(bytes4));
 		assertStreamClosed();
-		assertIt(data4);
+		assertIt(bytes4);
 
-		item.setData(stream(data6));
+		item.setData(stream(bytes6));
 		assertStreamClosed();
-		assertIt(data6);
+		assertIt(bytes6);
 
-		item.setData(stream(data0));
+		item.setData(stream(bytes0));
 		assertStreamClosed();
-		assertIt(data0);
+		assertIt(bytes0);
 
 		item.setData(stream(dataBig));
 		assertStreamClosed();
@@ -295,11 +302,11 @@ public class DataTest extends AbstractRuntimeTest
 
 
 		// set File
-		item.setData(file(data8));
-		assertIt(data8);
+		item.setData(file(bytes8));
+		assertIt(bytes8);
 
-		item.setData(file(data0));
-		assertIt(data0);
+		item.setData(file(bytes0));
+		assertIt(bytes0);
 
 		item.setData(file(dataBig));
 		assertIt(dataBig);
@@ -329,68 +336,68 @@ public class DataTest extends AbstractRuntimeTest
 
 		final DataSubItem subItem = deleteOnTearDown(new DataSubItem());
 
-		subItem.setData(stream(data4));
+		subItem.setData(stream(bytes4));
 		assertStreamClosed();
-		assertIt(data4, subItem);
-		assertEquals(data4.length, subItem.getDataLength());
+		assertIt(bytes4, subItem);
+		assertEquals(bytes4.length, subItem.getDataLength());
 
 		// test maximum length
-		item.setData10(data0);
-		item.setData10(data4);
-		item.setData10(data6);
-		item.setData10(data8);
-		item.setData10(data10);
-		assertData(data10, item.getData10Array());
+		item.setData10(bytes0);
+		item.setData10(bytes4);
+		item.setData10(bytes6);
+		item.setData10(bytes8);
+		item.setData10(bytes10);
+		assertData(bytes10, item.getData10Array());
 
 		try
 		{
-			item.setData10(data11);
+			item.setData10(bytes11);
 			fail();
 		}
 		catch(final DataLengthViolationException e)
 		{
 			assertEquals(item, e.getItem());
-			assertEquals(item.data10, e.getFeature());
-			assertEquals(item.data10, e.getFeature());
+			assertEquals(data10, e.getFeature());
+			assertEquals(data10, e.getFeature());
 			assertEquals(11, e.getLength());
 			assertEquals(true, e.isLengthExact());
-			assertEquals("length violation on " + item + ", 11 bytes is too long for " + item.data10, e.getMessage());
+			assertEquals("length violation on " + item + ", 11 bytes is too long for " + data10, e.getMessage());
 		}
-		assertData(data10, item.getData10Array());
+		assertData(bytes10, item.getData10Array());
 		try
 		{
-			item.setData10(stream(data11));
+			item.setData10(stream(bytes11));
 			fail();
 		}
 		catch(final DataLengthViolationException e)
 		{
 			assertEquals(item, e.getItem());
-			assertEquals(item.data10, e.getFeature());
-			assertEquals(item.data10, e.getFeature());
+			assertEquals(data10, e.getFeature());
+			assertEquals(data10, e.getFeature());
 			assertEquals(11, e.getLength());
 			assertEquals(false, e.isLengthExact());
-			assertEquals(e.getMessage(), "length violation on " + item + ", 11 bytes or more is too long for " + item.data10, e.getMessage());
+			assertEquals(e.getMessage(), "length violation on " + item + ", 11 bytes or more is too long for " + data10, e.getMessage());
 		}
-		assertData(data10, item.getData10Array());
+		assertData(bytes10, item.getData10Array());
 		try
 		{
-			item.setData10(file(data11));
+			item.setData10(file(bytes11));
 			fail();
 		}
 		catch(final DataLengthViolationException e)
 		{
 			assertEquals(item, e.getItem());
-			assertEquals(item.data10, e.getFeature());
-			assertEquals(item.data10, e.getFeature());
+			assertEquals(data10, e.getFeature());
+			assertEquals(data10, e.getFeature());
 			assertEquals(11, e.getLength());
 			assertEquals(true, e.isLengthExact());
-			assertEquals("length violation on " + item + ", 11 bytes is too long for " + item.data10, e.getMessage());
+			assertEquals("length violation on " + item + ", 11 bytes is too long for " + data10, e.getMessage());
 		}
-		assertData(data10, item.getData10Array());
+		assertData(bytes10, item.getData10Array());
 
-		final DataField.Value value4 = DataField.toValue(data4);
+		final DataField.Value value4 = DataField.toValue(bytes4);
 		item.setData(value4);
-		assertData(data4, item.getDataArray());
+		assertData(bytes4, item.getDataArray());
 		try
 		{
 			item.setData(value4);
@@ -404,66 +411,66 @@ public class DataTest extends AbstractRuntimeTest
 		// implements Settable
 		assertNull(item.getName());
 		item.set(
-				DataItem.data.map(data8),
-				DataItem.data10.map(data10),
+				DataItem.data.map(bytes8),
+				DataItem.data10.map(bytes10),
 				DataItem.name.map("eins")
 		);
-		assertData(data8, item.getDataArray());
-		assertData(data10, item.getData10Array());
+		assertData(bytes8, item.getDataArray());
+		assertData(bytes10, item.getData10Array());
 		assertEquals("eins", item.getName());
 
 		item.set(
-				DataItem.data.map(data11),
-				DataItem.data10.map(data10)
+				DataItem.data.map(bytes11),
+				DataItem.data10.map(bytes10)
 		);
-		assertData(data11, item.getDataArray());
-		assertData(data10, item.getData10Array());
+		assertData(bytes11, item.getDataArray());
+		assertData(bytes10, item.getData10Array());
 		assertEquals("eins", item.getName());
 
 		{
-			final DataItem item2 = deleteOnTearDown(new DataItem(data4, data10));
-			assertData(data4, item2.getDataArray());
-			assertData(data10, item2.getData10Array());
+			final DataItem item2 = deleteOnTearDown(new DataItem(bytes4, bytes10));
+			assertData(bytes4, item2.getDataArray());
+			assertData(bytes10, item2.getData10Array());
 		}
 		{
 			final DataItem item3 = deleteOnTearDown(DataItem.TYPE.newItem(
-					DataItem.data.map(data6),
-					DataItem.data10.map(data10)
+					DataItem.data.map(bytes6),
+					DataItem.data10.map(bytes10)
 			));
-			assertData(data6, item3.getDataArray());
-			assertData(data10, item3.getData10Array());
+			assertData(bytes6, item3.getDataArray());
+			assertData(bytes10, item3.getData10Array());
 		}
 
-		assertData(data10, item.getData10Array());
+		assertData(bytes10, item.getData10Array());
 		try
 		{
-			item.set(DataItem.data10.map(data11));
+			item.set(DataItem.data10.map(bytes11));
 			fail();
 		}
 		catch(final DataLengthViolationException e)
 		{
 			assertEquals(item, e.getItem());
-			assertEquals(item.data10, e.getFeature());
-			assertEquals(item.data10, e.getFeature());
+			assertEquals(data10, e.getFeature());
+			assertEquals(data10, e.getFeature());
 			assertEquals(11, e.getLength());
 			assertEquals(true, e.isLengthExact());
-			assertEquals("length violation on " + item + ", 11 bytes is too long for " + item.data10, e.getMessage());
+			assertEquals("length violation on " + item + ", 11 bytes is too long for " + data10, e.getMessage());
 		}
-		assertData(data10, item.getData10Array());
+		assertData(bytes10, item.getData10Array());
 
 		try
 		{
-			DataItem.TYPE.newItem(DataItem.data10.map(data11));
+			DataItem.TYPE.newItem(DataItem.data10.map(bytes11));
 			fail();
 		}
 		catch(final DataLengthViolationException e)
 		{
 			assertEquals(null, e.getItem());
-			assertEquals(item.data10, e.getFeature());
-			assertEquals(item.data10, e.getFeature());
+			assertEquals(data10, e.getFeature());
+			assertEquals(data10, e.getFeature());
 			assertEquals(11, e.getLength());
 			assertEquals(true, e.isLengthExact());
-			assertEquals("length violation, 11 bytes is too long for " + item.data10, e.getMessage());
+			assertEquals("length violation, 11 bytes is too long for " + data10, e.getMessage());
 		}
 		item.set(
 				DataItem.data.mapNull(),
@@ -473,35 +480,40 @@ public class DataTest extends AbstractRuntimeTest
 		assertNull(item.getData10Array());
 	}
 
-	@SuppressWarnings("unchecked") // OK: test bad API usage
+	@SuppressWarnings({"unchecked", "rawtypes"}) // OK: test bad API usage
 	public void testUnchecked()
 	{
-		item.data.set(item, data8);
-		assertData(data8, item.getDataArray());
+		data.set(item, bytes8);
+		assertData(bytes8, item.getDataArray());
 		try
 		{
 			item.set(
-					new SetValue(DataItem.data, "zack")
+					SetValue.map((Field)DataItem.data, "zack")
 			);
 			fail();
 		}
 		catch(final ClassCastException e)
 		{
-			assertEquals("expected a " + DataField.Value.class.getName() + ", but was a java.lang.String for " + item.data + '.', e.getMessage());
+			assertEquals("expected a " + DataField.Value.class.getName() + ", but was a java.lang.String for " + data + '.', e.getMessage());
 		}
-		assertData(data8, item.getDataArray());
+		assertData(bytes8, item.getDataArray());
 
 		try
 		{
 			DataItem.TYPE.newItem(
-					new SetValue(DataItem.data, new Integer(1))
+					SetValue.map((Field)DataItem.data, Integer.valueOf(1))
 			);
 			fail();
 		}
 		catch(final ClassCastException e)
 		{
-			assertEquals("expected a " + DataField.Value.class.getName() + ", but was a java.lang.Integer for " + item.data + '.', e.getMessage());
+			assertEquals("expected a " + DataField.Value.class.getName() + ", but was a java.lang.Integer for " + data + '.', e.getMessage());
 		}
-		assertData(data8, item.getDataArray());
+		assertData(bytes8, item.getDataArray());
+	}
+
+	public void testSchema()
+	{
+		assertSchema();
 	}
 }
