@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 2004-2009  exedio GmbH (www.exedio.com)
+ * Copyright (C) 2004-2012  exedio GmbH (www.exedio.com)
  *
  * This library is free software; you can redistribute it and/or
  * modify it under the terms of the GNU Lesser General Public
@@ -18,10 +18,9 @@
 
 package com.exedio.cope;
 
-
 public class HiddenFeatureTest extends AbstractRuntimeTest
 {
-	public/*for web.xml*/ static final Model MODEL = new Model(HiddenFeatureSuperItem.TYPE, HiddenFeatureSubItem.TYPE);
+	public static final Model MODEL = new Model(HiddenFeatureSuperItem.TYPE, HiddenFeatureSubItem.TYPE);
 
 	public HiddenFeatureTest()
 	{
@@ -30,77 +29,75 @@ public class HiddenFeatureTest extends AbstractRuntimeTest
 
 	public void testHierarchy()
 	{
-		HiddenFeatureSuperItem sp = null;
-		HiddenFeatureSubItem sb = null;
-		final This spt = sp.TYPE.getThis();
-		final This sbt = sb.TYPE.getThis();
+		final This<?> spt = HiddenFeatureSuperItem.TYPE.getThis();
+		final This<?> sbt = HiddenFeatureSubItem.TYPE.getThis();
 
 		// test model
-		assertNotSame(sp.hiddenSame,  sb.hiddenSame);
-		assertNotSame(sp.hiddenOther, sb.hiddenOther);
+		assertNotSame(HiddenFeatureSuperItem.hiddenSame,  HiddenFeatureSubItem.hiddenSame);
+		assertNotSame(HiddenFeatureSuperItem.hiddenOther, HiddenFeatureSubItem.hiddenOther);
 
-		assertEquals(list(spt, sp.nonHiddenSuper, sp.hiddenSame, sp.hiddenOther), sp.TYPE.getDeclaredFeatures());
-		assertEquals(list(spt, sp.nonHiddenSuper, sp.hiddenSame, sp.hiddenOther), sp.TYPE.getFeatures());
-		assertEquals(list(sp.nonHiddenSuper, sp.hiddenSame, sp.hiddenOther), sp.TYPE.getDeclaredFields());
-		assertEquals(list(sp.nonHiddenSuper, sp.hiddenSame, sp.hiddenOther), sp.TYPE.getFields());
-		assertSame(sp.TYPE, spt.getType());
-		assertSame(sp.TYPE, sp.nonHiddenSuper.getType());
-		assertSame(sp.TYPE, sp.hiddenSame.getType());
-		assertSame(sp.TYPE, sp.hiddenOther.getType());
+		assertEquals(list(spt, HiddenFeatureSuperItem.nonHiddenSuper, HiddenFeatureSuperItem.hiddenSame, HiddenFeatureSuperItem.hiddenOther), HiddenFeatureSuperItem.TYPE.getDeclaredFeatures());
+		assertEquals(list(spt, HiddenFeatureSuperItem.nonHiddenSuper, HiddenFeatureSuperItem.hiddenSame, HiddenFeatureSuperItem.hiddenOther), HiddenFeatureSuperItem.TYPE.getFeatures());
+		assertEquals(list(HiddenFeatureSuperItem.nonHiddenSuper, HiddenFeatureSuperItem.hiddenSame, HiddenFeatureSuperItem.hiddenOther), HiddenFeatureSuperItem.TYPE.getDeclaredFields());
+		assertEquals(list(HiddenFeatureSuperItem.nonHiddenSuper, HiddenFeatureSuperItem.hiddenSame, HiddenFeatureSuperItem.hiddenOther), HiddenFeatureSuperItem.TYPE.getFields());
+		assertSame(HiddenFeatureSuperItem.TYPE, spt.getType());
+		assertSame(HiddenFeatureSuperItem.TYPE, HiddenFeatureSuperItem.nonHiddenSuper.getType());
+		assertSame(HiddenFeatureSuperItem.TYPE, HiddenFeatureSuperItem.hiddenSame.getType());
+		assertSame(HiddenFeatureSuperItem.TYPE, HiddenFeatureSuperItem.hiddenOther.getType());
 		assertEquals("this",           spt.getName());
-		assertEquals("nonHiddenSuper", sp.nonHiddenSuper.getName());
-		assertEquals("hiddenSame",     sp.hiddenSame.getName());
-		assertEquals("hiddenOther",    sp.hiddenOther.getName());
-		assertSame(spt,               sp.TYPE.getDeclaredFeature("this"));
-		assertSame(sp.nonHiddenSuper, sp.TYPE.getDeclaredFeature("nonHiddenSuper"));
-		assertSame(sp.hiddenSame,     sp.TYPE.getDeclaredFeature("hiddenSame"));
-		assertSame(sp.hiddenOther,    sp.TYPE.getDeclaredFeature("hiddenOther"));
-		assertSame(null,              sp.TYPE.getDeclaredFeature("nonHiddenSub"));
-		assertSame(spt,               sp.TYPE.getFeature("this"));
-		assertSame(sp.nonHiddenSuper, sp.TYPE.getFeature("nonHiddenSuper"));
-		assertSame(sp.hiddenSame,     sp.TYPE.getFeature("hiddenSame"));
-		assertSame(sp.hiddenOther,    sp.TYPE.getFeature("hiddenOther"));
-		assertSame(null,              sp.TYPE.getFeature("nonHiddenSub"));
+		assertEquals("nonHiddenSuper", HiddenFeatureSuperItem.nonHiddenSuper.getName());
+		assertEquals("hiddenSame",     HiddenFeatureSuperItem.hiddenSame.getName());
+		assertEquals("hiddenOther",    HiddenFeatureSuperItem.hiddenOther.getName());
+		assertSame(spt,               HiddenFeatureSuperItem.TYPE.getDeclaredFeature("this"));
+		assertSame(HiddenFeatureSuperItem.nonHiddenSuper, HiddenFeatureSuperItem.TYPE.getDeclaredFeature("nonHiddenSuper"));
+		assertSame(HiddenFeatureSuperItem.hiddenSame,     HiddenFeatureSuperItem.TYPE.getDeclaredFeature("hiddenSame"));
+		assertSame(HiddenFeatureSuperItem.hiddenOther,    HiddenFeatureSuperItem.TYPE.getDeclaredFeature("hiddenOther"));
+		assertSame(null,              HiddenFeatureSuperItem.TYPE.getDeclaredFeature("nonHiddenSub"));
+		assertSame(spt,               HiddenFeatureSuperItem.TYPE.getFeature("this"));
+		assertSame(HiddenFeatureSuperItem.nonHiddenSuper, HiddenFeatureSuperItem.TYPE.getFeature("nonHiddenSuper"));
+		assertSame(HiddenFeatureSuperItem.hiddenSame,     HiddenFeatureSuperItem.TYPE.getFeature("hiddenSame"));
+		assertSame(HiddenFeatureSuperItem.hiddenOther,    HiddenFeatureSuperItem.TYPE.getFeature("hiddenOther"));
+		assertSame(null,              HiddenFeatureSuperItem.TYPE.getFeature("nonHiddenSub"));
 
-		assertEquals(list(sbt, sb.nonHiddenSub, sb.hiddenSame, sb.hiddenOther), sb.TYPE.getDeclaredFeatures());
-		assertEquals(list(sbt, sp.nonHiddenSuper, sp.hiddenSame, sp.hiddenOther, sb.nonHiddenSub, sb.hiddenSame, sb.hiddenOther), sb.TYPE.getFeatures());
-		assertEquals(list(sb.nonHiddenSub, sb.hiddenSame, sb.hiddenOther), sb.TYPE.getDeclaredFields());
-		assertEquals(list(sp.nonHiddenSuper, sp.hiddenSame, sp.hiddenOther, sb.nonHiddenSub, sb.hiddenSame, sb.hiddenOther), sb.TYPE.getFields());
-		assertSame(sb.TYPE, sbt.getType());
-		assertSame(sb.TYPE, sb.nonHiddenSub.getType());
-		assertSame(sb.TYPE, sb.hiddenSame.getType());
-		assertSame(sb.TYPE, sb.hiddenOther.getType());
+		assertEquals(list(sbt, HiddenFeatureSubItem.nonHiddenSub, HiddenFeatureSubItem.hiddenSame, HiddenFeatureSubItem.hiddenOther), HiddenFeatureSubItem.TYPE.getDeclaredFeatures());
+		assertEquals(list(sbt, HiddenFeatureSuperItem.nonHiddenSuper, HiddenFeatureSuperItem.hiddenSame, HiddenFeatureSuperItem.hiddenOther, HiddenFeatureSubItem.nonHiddenSub, HiddenFeatureSubItem.hiddenSame, HiddenFeatureSubItem.hiddenOther), HiddenFeatureSubItem.TYPE.getFeatures());
+		assertEquals(list(HiddenFeatureSubItem.nonHiddenSub, HiddenFeatureSubItem.hiddenSame, HiddenFeatureSubItem.hiddenOther), HiddenFeatureSubItem.TYPE.getDeclaredFields());
+		assertEquals(list(HiddenFeatureSuperItem.nonHiddenSuper, HiddenFeatureSuperItem.hiddenSame, HiddenFeatureSuperItem.hiddenOther, HiddenFeatureSubItem.nonHiddenSub, HiddenFeatureSubItem.hiddenSame, HiddenFeatureSubItem.hiddenOther), HiddenFeatureSubItem.TYPE.getFields());
+		assertSame(HiddenFeatureSubItem.TYPE, sbt.getType());
+		assertSame(HiddenFeatureSubItem.TYPE, HiddenFeatureSubItem.nonHiddenSub.getType());
+		assertSame(HiddenFeatureSubItem.TYPE, HiddenFeatureSubItem.hiddenSame.getType());
+		assertSame(HiddenFeatureSubItem.TYPE, HiddenFeatureSubItem.hiddenOther.getType());
 		assertEquals("this", sbt.getName());
-		assertEquals("nonHiddenSub", sb.nonHiddenSub.getName());
-		assertEquals("hiddenSame", sb.hiddenSame.getName());
-		assertEquals("hiddenOther", sb.hiddenOther.getName());
-		assertSame(sbt,               sb.TYPE.getDeclaredFeature("this"));
-		assertSame(null,              sb.TYPE.getDeclaredFeature("nonHiddenSuper"));
-		assertSame(sb.hiddenSame,     sb.TYPE.getDeclaredFeature("hiddenSame"));
-		assertSame(sb.hiddenOther,    sb.TYPE.getDeclaredFeature("hiddenOther"));
-		assertSame(sb.nonHiddenSub,   sb.TYPE.getDeclaredFeature("nonHiddenSub"));
-		assertSame(sbt,               sb.TYPE.getFeature("this"));
-		assertSame(sp.nonHiddenSuper, sb.TYPE.getFeature("nonHiddenSuper"));
-		assertSame(sb.hiddenSame,     sb.TYPE.getFeature("hiddenSame"));
-		assertSame(sb.hiddenOther,    sb.TYPE.getFeature("hiddenOther"));
-		assertSame(sb.nonHiddenSub,   sb.TYPE.getFeature("nonHiddenSub"));
+		assertEquals("nonHiddenSub", HiddenFeatureSubItem.nonHiddenSub.getName());
+		assertEquals("hiddenSame", HiddenFeatureSubItem.hiddenSame.getName());
+		assertEquals("hiddenOther", HiddenFeatureSubItem.hiddenOther.getName());
+		assertSame(sbt,               HiddenFeatureSubItem.TYPE.getDeclaredFeature("this"));
+		assertSame(null,              HiddenFeatureSubItem.TYPE.getDeclaredFeature("nonHiddenSuper"));
+		assertSame(HiddenFeatureSubItem.hiddenSame,     HiddenFeatureSubItem.TYPE.getDeclaredFeature("hiddenSame"));
+		assertSame(HiddenFeatureSubItem.hiddenOther,    HiddenFeatureSubItem.TYPE.getDeclaredFeature("hiddenOther"));
+		assertSame(HiddenFeatureSubItem.nonHiddenSub,   HiddenFeatureSubItem.TYPE.getDeclaredFeature("nonHiddenSub"));
+		assertSame(sbt,               HiddenFeatureSubItem.TYPE.getFeature("this"));
+		assertSame(HiddenFeatureSuperItem.nonHiddenSuper, HiddenFeatureSubItem.TYPE.getFeature("nonHiddenSuper"));
+		assertSame(HiddenFeatureSubItem.hiddenSame,     HiddenFeatureSubItem.TYPE.getFeature("hiddenSame"));
+		assertSame(HiddenFeatureSubItem.hiddenOther,    HiddenFeatureSubItem.TYPE.getFeature("hiddenOther"));
+		assertSame(HiddenFeatureSubItem.nonHiddenSub,   HiddenFeatureSubItem.TYPE.getFeature("nonHiddenSub"));
 
 		assertEquals("HiddenFeatureSuperItem.this",           spt.getID());
-		assertEquals("HiddenFeatureSuperItem.nonHiddenSuper", sp.nonHiddenSuper.getID());
-		assertEquals("HiddenFeatureSuperItem.hiddenSame",     sp.hiddenSame.getID());
-		assertEquals("HiddenFeatureSuperItem.hiddenOther",    sp.hiddenOther.getID());
+		assertEquals("HiddenFeatureSuperItem.nonHiddenSuper", HiddenFeatureSuperItem.nonHiddenSuper.getID());
+		assertEquals("HiddenFeatureSuperItem.hiddenSame",     HiddenFeatureSuperItem.hiddenSame.getID());
+		assertEquals("HiddenFeatureSuperItem.hiddenOther",    HiddenFeatureSuperItem.hiddenOther.getID());
 		assertEquals("HiddenFeatureSubItem.this",         sbt.getID());
-		assertEquals("HiddenFeatureSubItem.nonHiddenSub", sb.nonHiddenSub.getID());
-		assertEquals("HiddenFeatureSubItem.hiddenSame",   sb.hiddenSame.getID());
-		assertEquals("HiddenFeatureSubItem.hiddenOther",  sb.hiddenOther.getID());
+		assertEquals("HiddenFeatureSubItem.nonHiddenSub", HiddenFeatureSubItem.nonHiddenSub.getID());
+		assertEquals("HiddenFeatureSubItem.hiddenSame",   HiddenFeatureSubItem.hiddenSame.getID());
+		assertEquals("HiddenFeatureSubItem.hiddenOther",  HiddenFeatureSubItem.hiddenOther.getID());
 		assertSame(spt,               model.getFeature("HiddenFeatureSuperItem.this"));
-		assertSame(sp.nonHiddenSuper, model.getFeature("HiddenFeatureSuperItem.nonHiddenSuper"));
-		assertSame(sp.hiddenSame,     model.getFeature("HiddenFeatureSuperItem.hiddenSame"));
-		assertSame(sp.hiddenOther,    model.getFeature("HiddenFeatureSuperItem.hiddenOther"));
+		assertSame(HiddenFeatureSuperItem.nonHiddenSuper, model.getFeature("HiddenFeatureSuperItem.nonHiddenSuper"));
+		assertSame(HiddenFeatureSuperItem.hiddenSame,     model.getFeature("HiddenFeatureSuperItem.hiddenSame"));
+		assertSame(HiddenFeatureSuperItem.hiddenOther,    model.getFeature("HiddenFeatureSuperItem.hiddenOther"));
 		assertSame(sbt,             model.getFeature("HiddenFeatureSubItem.this"));
-		assertSame(sb.nonHiddenSub, model.getFeature("HiddenFeatureSubItem.nonHiddenSub"));
-		assertSame(sb.hiddenSame,   model.getFeature("HiddenFeatureSubItem.hiddenSame"));
-		assertSame(sb.hiddenOther,  model.getFeature("HiddenFeatureSubItem.hiddenOther"));
+		assertSame(HiddenFeatureSubItem.nonHiddenSub, model.getFeature("HiddenFeatureSubItem.nonHiddenSub"));
+		assertSame(HiddenFeatureSubItem.hiddenSame,   model.getFeature("HiddenFeatureSubItem.hiddenSame"));
+		assertSame(HiddenFeatureSubItem.hiddenOther,  model.getFeature("HiddenFeatureSubItem.hiddenOther"));
 		assertSame(null, model.getFeature("HiddenFeatureSuperItem.hiddenOtherx"));
 		assertSame(null, model.getFeature("HiddenFeatureSuperItemx.hiddenOther"));
 		assertSame(null, model.getFeature("HiddenFeatureSuperItemhiddenOther"));
@@ -113,35 +110,35 @@ public class HiddenFeatureTest extends AbstractRuntimeTest
 				model.getHiddenFeatures());
 
 		// test persistence
-		sp = deleteOnTearDown(new HiddenFeatureSuperItem());
+		final HiddenFeatureSuperItem sp = deleteOnTearDown(new HiddenFeatureSuperItem());
 		sp.setHiddenSame("hiddenSameSuperSuper");
 		sp.setHiddenOther("hiddenOtherSuperSuper");
-		sb = deleteOnTearDown(new HiddenFeatureSubItem());
+		final HiddenFeatureSubItem sb = deleteOnTearDown(new HiddenFeatureSubItem());
 		sb.setHiddenSame("hiddenSameSuperSub");
 		sb.setHiddenOther("hiddenOtherSuperSub");
-		sb.hiddenSame.set(sb, "hiddenSameSub");
-		sb.hiddenOther.set(sb, 55);
+		HiddenFeatureSubItem.hiddenSame.set(sb, "hiddenSameSub");
+		HiddenFeatureSubItem.hiddenOther.set(sb, 55);
 
 		restartTransaction();
 		assertEquals("hiddenSameSuperSuper", sp.getHiddenSame());
 		assertEquals("hiddenOtherSuperSuper", sp.getHiddenOther());
 		assertEquals("hiddenSameSuperSub", sb.getHiddenSame());
 		assertEquals("hiddenOtherSuperSub", sb.getHiddenOther());
-		assertEquals("hiddenSameSub", sb.hiddenSame.get(sb));
-		assertEquals(new Integer(55), sb.hiddenOther.get(sb));
+		assertEquals("hiddenSameSub", HiddenFeatureSubItem.hiddenSame.get(sb));
+		assertEquals(Integer.valueOf(55), HiddenFeatureSubItem.hiddenOther.get(sb));
 
-		assertContains(sp, sp.TYPE.search(sp.hiddenSame.equal("hiddenSameSuperSuper")));
-		assertContains(sp, sp.TYPE.search(sp.hiddenOther.equal("hiddenOtherSuperSuper")));
-		assertContains(sb, sp.TYPE.search(sp.hiddenSame.equal("hiddenSameSuperSub")));
-		assertContains(sb, sp.TYPE.search(sp.hiddenOther.equal("hiddenOtherSuperSub")));
+		assertContains(sp, HiddenFeatureSuperItem.TYPE.search(HiddenFeatureSuperItem.hiddenSame.equal("hiddenSameSuperSuper")));
+		assertContains(sp, HiddenFeatureSuperItem.TYPE.search(HiddenFeatureSuperItem.hiddenOther.equal("hiddenOtherSuperSuper")));
+		assertContains(sb, HiddenFeatureSuperItem.TYPE.search(HiddenFeatureSuperItem.hiddenSame.equal("hiddenSameSuperSub")));
+		assertContains(sb, HiddenFeatureSuperItem.TYPE.search(HiddenFeatureSuperItem.hiddenOther.equal("hiddenOtherSuperSub")));
 
-		assertContains(sb.TYPE.search(sp.hiddenSame.equal("hiddenSameSuperSuper")));
-		assertContains(sb.TYPE.search(sp.hiddenOther.equal("hiddenOtherSuperSuper")));
-		assertContains(sb, sb.TYPE.search(sp.hiddenSame.equal("hiddenSameSuperSub")));
-		assertContains(sb, sb.TYPE.search(sp.hiddenOther.equal("hiddenOtherSuperSub")));
+		assertContains(HiddenFeatureSubItem.TYPE.search(HiddenFeatureSuperItem.hiddenSame.equal("hiddenSameSuperSuper")));
+		assertContains(HiddenFeatureSubItem.TYPE.search(HiddenFeatureSuperItem.hiddenOther.equal("hiddenOtherSuperSuper")));
+		assertContains(sb, HiddenFeatureSubItem.TYPE.search(HiddenFeatureSuperItem.hiddenSame.equal("hiddenSameSuperSub")));
+		assertContains(sb, HiddenFeatureSubItem.TYPE.search(HiddenFeatureSuperItem.hiddenOther.equal("hiddenOtherSuperSub")));
 
-		assertContains(sb, sb.TYPE.search(sb.hiddenSame.equal("hiddenSameSub")));
-		assertContains(sb, sb.TYPE.search(sb.hiddenOther.equal(55)));
+		assertContains(sb, HiddenFeatureSubItem.TYPE.search(HiddenFeatureSubItem.hiddenSame.equal("hiddenSameSub")));
+		assertContains(sb, HiddenFeatureSubItem.TYPE.search(HiddenFeatureSubItem.hiddenOther.equal(55)));
 	}
 
 }
