@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 2004-2009  exedio GmbH (www.exedio.com)
+ * Copyright (C) 2004-2012  exedio GmbH (www.exedio.com)
  *
  * This library is free software; you can redistribute it and/or
  * modify it under the terms of the GNU Lesser General Public
@@ -19,14 +19,24 @@
 package com.exedio.cope;
 
 import static com.exedio.cope.Query.newQuery;
+import static com.exedio.cope.testmodel.AttributeItem.TYPE;
+import static com.exedio.cope.testmodel.AttributeItem.someNotNullBoolean;
+import static com.exedio.cope.testmodel.AttributeItem.someNotNullDouble;
+import static com.exedio.cope.testmodel.AttributeItem.someNotNullEnum;
+import static com.exedio.cope.testmodel.AttributeItem.someNotNullInteger;
+import static com.exedio.cope.testmodel.AttributeItem.someNotNullItem;
+import static com.exedio.cope.testmodel.AttributeItem.someNotNullLong;
+import static com.exedio.cope.testmodel.AttributeItem.someNotNullString;
+import static com.exedio.cope.testmodel.AttributeItem.someString;
+import static com.exedio.cope.testmodel.AttributeItem.someStringLength;
+import static com.exedio.cope.testmodel.AttributeItem.someStringUpperCase;
 
+import com.exedio.cope.testmodel.AttributeItem;
+import com.exedio.cope.testmodel.AttributeItem.SomeEnum;
+import com.exedio.cope.testmodel.EmptyItem;
 import java.util.Collection;
 import java.util.Iterator;
 import java.util.List;
-
-import com.exedio.cope.testmodel.AttributeItem;
-import com.exedio.cope.testmodel.EmptyItem;
-import com.exedio.cope.testmodel.AttributeItem.SomeEnum;
 
 public class SelectTest extends TestmodelTest
 {
@@ -67,17 +77,17 @@ public class SelectTest extends TestmodelTest
 
 	public void testSelect()
 	{
-		final Query query = newQuery(
-				new Function[]{
-						item.someString, item.someStringUpperCase, item.someStringLength, item.someNotNullString,
-						item.someNotNullInteger, item.someNotNullLong, item.someNotNullDouble,
-						item.someNotNullBoolean, item.someNotNullItem, item.someNotNullEnum},
-				item.TYPE,
+		final Query<List<Object>> query = newQuery(
+				new Function<?>[]{
+						someString, someStringUpperCase, someStringLength, someNotNullString,
+						someNotNullInteger, someNotNullLong, someNotNullDouble,
+						someNotNullBoolean, someNotNullItem, someNotNullEnum},
+				TYPE,
 				null);
-		query.setOrderBy(item.someNotNullString, false);
-		final Collection result = query.search();
+		query.setOrderBy(someNotNullString, false);
+		final Collection<List<Object>> result = query.search();
 		assertNotNull(query.toString());
-		final Iterator i = result.iterator();
+		final Iterator<List<Object>> i = result.iterator();
 
 		assertRow(i, "1z",     "1Z",     2, "someString9", 1, 4l, 2.1, true, someItem, AttributeItem.SomeEnum.enumValue1);
 		assertRow(i, "1zz",    "1ZZ",    3, "someString8", 3, 5l, 2.4, true, someItem, AttributeItem.SomeEnum.enumValue2);
@@ -87,7 +97,7 @@ public class SelectTest extends TestmodelTest
 	}
 
 	private static final void assertRow(
-			final Iterator i,
+			final Iterator<List<Object>> i,
 			final String someString,
 			final String someStringUppercase,
 			final int someStringLength,
@@ -102,8 +112,8 @@ public class SelectTest extends TestmodelTest
 		assertEqualsUnmodifiable(list(
 				someString, someStringUppercase, Integer.valueOf(someStringLength),
 				someNotNullString, Integer.valueOf(someNotNullInteger), Long.valueOf(someNotNullLong),
-				new Double(someNotNullDouble), new Boolean(someNotNullBoolean), someNotNullItem, someNotNullEnumeration),
-			(List<?>)i.next());
+				Double.valueOf(someNotNullDouble), Boolean.valueOf(someNotNullBoolean), someNotNullItem, someNotNullEnumeration),
+			i.next());
 	}
 
 }
